; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/common/extr_action_util.c_send_keyboard_report.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/common/extr_action_util.c_send_keyboard_report.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@real_mods = common dso_local global i32 0, align 4
@keyboard_report = common dso_local global %struct.TYPE_4__* null, align 8
@weak_mods = common dso_local global i32 0, align 4
@macro_mods = common dso_local global i32 0, align 4
@oneshot_mods = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @send_keyboard_report() #0 {
  %1 = load i32, i32* @real_mods, align 4
  %2 = load %struct.TYPE_4__*, %struct.TYPE_4__** @keyboard_report, align 8
  %3 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 0
  store i32 %1, i32* %3, align 4
  %4 = load i32, i32* @weak_mods, align 4
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** @keyboard_report, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = or i32 %7, %4
  store i32 %8, i32* %6, align 4
  %9 = load i32, i32* @macro_mods, align 4
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** @keyboard_report, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = or i32 %12, %9
  store i32 %13, i32* %11, align 4
  %14 = load i32, i32* @oneshot_mods, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %28

16:                                               ; preds = %0
  %17 = load i32, i32* @oneshot_mods, align 4
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** @keyboard_report, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = or i32 %20, %17
  store i32 %21, i32* %19, align 4
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** @keyboard_report, align 8
  %23 = call i64 @has_anykey(%struct.TYPE_4__* %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %16
  %26 = call i32 (...) @clear_oneshot_mods()
  br label %27

27:                                               ; preds = %25, %16
  br label %28

28:                                               ; preds = %27, %0
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** @keyboard_report, align 8
  %30 = call i32 @host_keyboard_send(%struct.TYPE_4__* %29)
  ret void
}

declare dso_local i64 @has_anykey(%struct.TYPE_4__*) #1

declare dso_local i32 @clear_oneshot_mods(...) #1

declare dso_local i32 @host_keyboard_send(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
